Refactore and reorganize code. Fix vanilla Traffic Routes not working. Make "extended" path view less invasive.

--- a/OwnVehiclesVisualizer.csproj
+++ b/OwnVehiclesVisualizer.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <LangVersion>preview</LangVersion>
     <Deterministic>false</Deterministic>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,12 +46,11 @@
       <HintPath>$(ManagedDLLPath)\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="CitiesHarmony.API, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\CitiesHarmony.API.2.1.0\lib\net35\CitiesHarmony.API.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="CitiesHarmony.API, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\CitiesHarmony.API.2.2.0\lib\net35\CitiesHarmony.API.dll</HintPath>
     </Reference>
     <Reference Include="CitiesHarmony.Harmony, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\CitiesHarmony.Harmony.2.2.0\lib\net35\CitiesHarmony.Harmony.dll</HintPath>
+      <HintPath>packages\CitiesHarmony.Harmony.2.2.2\lib\net35\CitiesHarmony.Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ColossalManaged">
@@ -76,6 +76,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\BuildingManagerPatch.cs" />
+    <Compile Include="Source\CodeMatcherExtensions.cs" />
+    <Compile Include="Source\Log.cs" />
     <Compile Include="Source\InstanceManagerPatch.cs" />
     <Compile Include="Source\CitiesExtensions.cs" />
     <Compile Include="Source\ExtendedPathVisualizer.cs" />
